# lizard

./: README.md  pyproject.toml
examples/: opening_angles.ipynb
lizard/: ac3airlib.py  bitflags.py  constants.py  satellite.py  thermodynamics.py
lizard/geotools/: distance.py
lizard/mpltools/: legend.py  style.py
lizard/pamtools/: pamtra_tools.py  profile.py
lizard/readers/: amali_l0.py  amali_l1.py  amali_l2cm.py  amali_l2cth.py  amsr2_sic.py  amsr2_sic_track.py  band_pass.py  bbr.py  brightness_temperature.py  cloudmask_hamp_mira.py  cth_intake.py  dropsondes.py  emissivity.py  era5.py  footprint.py  gpm_l1c.py  gps_ins.py  halo_kt19.py  hamp.py  land.py  mean_sea_ice.py  mira.py  mirac_a.py  mirac_a_tb_l0.py  mirac_a_tb_l1.py  mirac_a_tb_raw.py  multiyearice.py  noseboom.py  pamtra_dropsondes.py  pamtra_era5.py  radiosonde.py  sat_at_aircraft.py  sat_tracks.py  surftemp.py  wales.py  worldview.py
lizard/rt/: polarization.py
lizard/sattools/: __init__.py  colocation.py  ephemeris.py  sat_planning.py  sat_tools.py
lizard/writers/: dataset_to_table.py  figure_to_file.py  mirac_a_tb_l0.py  mirac_a_tb_l1.py  xr2shp.py
test/: test_ac3airlib.py  test_gpm_reader.py  test_pamtra_importer.py  test_reader.py
